adjust an error parameter

--- a/Calculate_mean_diameter.ipynb
+++ b/Calculate_mean_diameter.ipynb
@@ -6,7 +6,7 @@
       "name": "Calculate mean diameter.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOeHnegmCkUVy/8VA0bDDCV",
+      "authorship_tag": "ABX9TyMYSbaXiUl86Lp3SGDycNz7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,11 +84,9 @@
         "  tb = pt.PrettyTable()\n",
         "  tb.field_names = ['Image_name', 'Mean_diameter', 'Std']\n",
         "  tb.add_row([file_name, mean, std])\n",
-        "\n",
-        "  # print(\"====================== %s ======================\" % (file_name))\n",
         "  print(tb)"
       ],
-      "execution_count": 39,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -113,7 +111,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "2cef2e62-e52f-4a21-ca4f-7510a24fe946"
+        "outputId": "97ddc472-c3b2-4ee8-b6d5-ec4475cb884f"
       },
       "source": [
         "for i in range(1,11):\n",
@@ -156,7 +154,7 @@
         "  # Calculatea mean diameter\n",
         "  mean_diameter = sum(diameter_list) / len(diameter_list)\n",
         "  # Calculatea standard deviation\n",
-        "  variance = sum([((D - mean_diameter) ** 2) for r in diameter_list]) / len(diameter_list)\n",
+        "  variance = sum([((D - mean_diameter) ** 2) for D in diameter_list]) / len(diameter_list)\n",
         "  std = variance ** 0.5\n",
         "\n",
         "  # Print mean and std table\n",
@@ -169,7 +167,7 @@
         "  #   writer = csv.writer(csvfile)\n",
         "  #   writer.writerow([file_name, mean_diameter, std])"
       ],
-      "execution_count": 41,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +175,7 @@
             "+------------+-------------------+--------------------+\n",
             "| Image_name |   Mean_diameter   |        Std         |\n",
             "+------------+-------------------+--------------------+\n",
-            "|  YQT38_1   | 61.81738003916689 | 1.8567147749657735 |\n",
+            "|  YQT38_1   | 61.81738003916689 | 10.523893287199819 |\n",
             "+------------+-------------------+--------------------+\n"
           ],
           "name": "stdout"
@@ -202,7 +200,7 @@
             "+------------+-------------------+--------------------+\n",
             "| Image_name |   Mean_diameter   |        Std         |\n",
             "+------------+-------------------+--------------------+\n",
-            "|  YQT38_2   | 64.42257673128768 | 16.756467872304885 |\n",
+            "|  YQT38_2   | 64.42257673128768 | 12.514057249892957 |\n",
             "+------------+-------------------+--------------------+\n"
           ],
           "name": "stdout"
@@ -224,11 +222,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+------------------+\n",
-            "| Image_name |   Mean_diameter   |       Std        |\n",
-            "+------------+-------------------+------------------+\n",
-            "|  YQT38_3   | 64.87862905269664 | 5.74083136446167 |\n",
-            "+------------+-------------------+------------------+\n"
+            "+------------+-------------------+--------------------+\n",
+            "| Image_name |   Mean_diameter   |        Std         |\n",
+            "+------------+-------------------+--------------------+\n",
+            "|  YQT38_3   | 64.87862905269664 | 10.729439037118624 |\n",
+            "+------------+-------------------+--------------------+\n"
           ],
           "name": "stdout"
         },
@@ -249,11 +247,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+-------------------+\n",
-            "| Image_name |   Mean_diameter   |        Std        |\n",
-            "+------------+-------------------+-------------------+\n",
-            "|  YQT38_4   | 60.70199855644831 | 13.47322643899237 |\n",
-            "+------------+-------------------+-------------------+\n"
+            "+------------+-------------------+--------------------+\n",
+            "| Image_name |   Mean_diameter   |        Std         |\n",
+            "+------------+-------------------+--------------------+\n",
+            "|  YQT38_4   | 60.70199855644831 | 12.914330853770554 |\n",
+            "+------------+-------------------+--------------------+\n"
           ],
           "name": "stdout"
         },
@@ -274,11 +272,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+------------------+\n",
-            "| Image_name |   Mean_diameter   |       Std        |\n",
-            "+------------+-------------------+------------------+\n",
-            "|  YQT38_5   | 60.29704808865799 | 7.04007793811833 |\n",
-            "+------------+-------------------+------------------+\n"
+            "+------------+-------------------+-------------------+\n",
+            "| Image_name |   Mean_diameter   |        Std        |\n",
+            "+------------+-------------------+-------------------+\n",
+            "|  YQT38_5   | 60.29704808865799 | 10.76699623299433 |\n",
+            "+------------+-------------------+-------------------+\n"
           ],
           "name": "stdout"
         },
@@ -299,11 +297,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+--------------------+\n",
-            "| Image_name |   Mean_diameter   |        Std         |\n",
-            "+------------+-------------------+--------------------+\n",
-            "|  YQT38_6   | 63.00254473872597 | 25.812516385104388 |\n",
-            "+------------+-------------------+--------------------+\n"
+            "+------------+-------------------+------------------+\n",
+            "| Image_name |   Mean_diameter   |       Std        |\n",
+            "+------------+-------------------+------------------+\n",
+            "|  YQT38_6   | 63.00254473872597 | 10.9875890061024 |\n",
+            "+------------+-------------------+------------------+\n"
           ],
           "name": "stdout"
         },
@@ -324,11 +322,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+--------------------+\n",
-            "| Image_name |   Mean_diameter   |        Std         |\n",
-            "+------------+-------------------+--------------------+\n",
-            "|  YQT38_7   | 63.06359687581614 | 16.017884853071575 |\n",
-            "+------------+-------------------+--------------------+\n"
+            "+------------+-------------------+-------------------+\n",
+            "| Image_name |   Mean_diameter   |        Std        |\n",
+            "+------------+-------------------+-------------------+\n",
+            "|  YQT38_7   | 63.06359687581614 | 11.40850239077769 |\n",
+            "+------------+-------------------+-------------------+\n"
           ],
           "name": "stdout"
         },
@@ -349,11 +347,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+-------------------+-------------------+\n",
-            "| Image_name |   Mean_diameter   |        Std        |\n",
-            "+------------+-------------------+-------------------+\n",
-            "|  YQT38_8   | 64.12093702581528 | 9.880466809212052 |\n",
-            "+------------+-------------------+-------------------+\n"
+            "+------------+-------------------+--------------------+\n",
+            "| Image_name |   Mean_diameter   |        Std         |\n",
+            "+------------+-------------------+--------------------+\n",
+            "|  YQT38_8   | 64.12093702581528 | 10.419033519378466 |\n",
+            "+------------+-------------------+--------------------+\n"
           ],
           "name": "stdout"
         },
@@ -374,11 +372,11 @@
           "text": [
             "\n",
             "\n",
-            "+------------+--------------------+--------------------+\n",
-            "| Image_name |   Mean_diameter    |        Std         |\n",
-            "+------------+--------------------+--------------------+\n",
-            "|  YQT38_9   | 60.097771394248355 | 1.5311920037637565 |\n",
-            "+------------+--------------------+--------------------+\n"
+            "+------------+--------------------+-------------------+\n",
+            "| Image_name |   Mean_diameter    |        Std        |\n",
+            "+------------+--------------------+-------------------+\n",
+            "|  YQT38_9   | 60.097771394248355 | 8.674078802538293 |\n",
+            "+------------+--------------------+-------------------+\n"
           ],
           "name": "stdout"
         },
@@ -402,7 +400,7 @@
             "+------------+--------------------+--------------------+\n",
             "| Image_name |   Mean_diameter    |        Std         |\n",
             "+------------+--------------------+--------------------+\n",
-            "|  YQT38_10  | 61.285041485113915 | 10.521332583187059 |\n",
+            "|  YQT38_10  | 61.285041485113915 | 14.406699417639517 |\n",
             "+------------+--------------------+--------------------+\n"
           ],
           "name": "stdout"
